Remove scrollbar and fix code if rearch input is empty

--- a/css/companyProfile.css
+++ b/css/companyProfile.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("/img/90457.jpg");
+    background-image: url("../img/90457.jpg");
 }
 
 .text-height-20 {
