--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,23 @@ body,html {
     min-width: 1049px;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+  }
+  
+
 .custom-input {
     height: 40px;
     width: 80%;
 }
+
+
+
+input:focus {
+
+   outline-width: 0;
+}
+
 
 button {
     height: 40px;
@@ -27,13 +40,11 @@ button {
 
 .stock-image {
     height: 40px;
-    width: 40px;
+    width: auto;
     margin-right: 10px;
 }
 
-/* .logo-width {
-    width: 50%;
-} */
+
 
 .marquee {
     width: max-content;
